feature: TRACEFOSS-442 - integrated repository